src/styles/Welcome.module.css
/* src/styles/Welcome.module.css */

.welcomeSection {
  display: flex;
  justify-content: center;
  width: 100%;
  background-image: linear-gradient(174.2deg, rgba(255,244,228,1) 20%, rgba(240,246,238,1) 67.4%);
  font-family: Poppins, sans-serif;
  font-weight: 500;
  color: #333;
  padding-top: 90px;
  padding-left: 30px;
  padding-bottom: 90px;
}

.contentContainer {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  width: 100%;
  max-width: 90%;
}

.textAndApprenticeshipContainer {
  flex: 1;
  margin-right: 50px;
}

.textContainer {
  margin-bottom: 30px;
}

.apprenticeshipContainer {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
  margin-bottom: 50px;
}

.apprenticeshipColumn {
  display: flex;
  flex-direction: column;
  margin-right: 50px;
}

.resumeButton {
  padding: 10px 20px;
  font-size: 18px;
  background-color: #333;
  color: white;
  border: none;
  border-radius: 50px;
  cursor: pointer;
  align-self: flex-start;
  margin-right: 50px;
  text-decoration: none;
}

.resumeButton:hover {
  background-color: black;
  color: white;
}

.imageContainer {
  display: flex;
  justify-content: flex-end;
  align-items: flex-start;
  width: 40%;
  margin-top: -50px;
}

.WelcomeImage {
  width: 100%;
}

.title {
  font-size: 60px;
  margin-bottom: 0px;
  margin-top: 0px;
  font-family: Poppins, sans-serif;
  font-weight: 700;
}

.subtitle {
  font-size: 28px;
  font-family: Poppins, sans-serif;
  font-weight: 500;
}

.description {
  font-size: 19px;
  font-family: Poppins, sans-serif;
  font-weight: 500;
}

.apprenticeshipSubtitle {
  font-size: 28px;
  margin-bottom: 0px;
  font-family: Poppins, sans-serif;
  font-weight: 700;
}

.apprenticeshipDescription {
  font-size: 19px;
  margin-bottom: 0px;
  font-family: Poppins, sans-serif;
  font-weight: 500;
}

